--- a/Todo-List-3.csproj
+++ b/Todo-List-3.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
 	<PackageReference Include="GraphQL" Version="8.5.0" />
 	<PackageReference Include="GraphQL.NewtonsoftJson" Version="8.5.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.6" />
 	<PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="6.0.36" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
